Wed Feb 26 16:13:26 1997  Ian Lance Taylor  <ian@cygnus.com>

	* client.c (add_prune_candidate): Skip addding this directory if
	it is the same as the first directory already on the list.

Mon Feb 24 21:36:43 1997  Noel Cragg  <noel@gargle.rain.org>

	* main.c (lookup_command_attribute): Add the "init" command to the
 	list of commands that don't use the current working directory.

Sun Feb 23 09:54:49 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (devcom3): Clean up at end of test.

	* sanity.sh (basicb): Add commented out test basicb-8a0, for
	whether CVS can print an error on bad numeric revision to diff.
	Commented out until we get around to fixing CVS.
	* diff.c (diff_file_nodiff): Add comment about this case.

	* fileattr.c (fileattr_read): If a filename is duplicated,
	continue to ignore subsequent lines but free the node so that we
	don't leak memory.
	* sanity.sh (devcom3): New tests devcom3-8 and devcom3-9 test for
	behavior on duplicated filenames.

	* fileattr.h: Add comment about unrecognized ENT-TYPE and order of
	lines in fileattr file.
	* fileattr.c (struct unrecog, unrecog_head): New variables, to
	record unrecognized lines.
	(fileattr_startdir): Assert that unrecog_head == NULL.
	(fileattr_read): Record unrecognized lines in unrecog_head linked
	list rather than ignoring them.
	(fileattr_write): Also write out unrecognized lines, if any.
	* sanity.sh (devcom3): New tests, test for above fix.

	* fileattr.h (fileattr_modify): Fix example in comment.

Sat Feb 22 08:30:27 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Add variable username.
	(basica rdiff multibranch log log2): Use it instead of our own
	(inconsistent) ways of matching an author name.

	* filesubr.c, root.c, rtag.c, server.c, subr.c, update.c,
	wrapper.c: Nuke PATH_MAX.
	* cvs.h, wrapper.c (wrap_fromcvs_process_file): Now returns void
	(return value had been unused).
	* cvs.h: Adjust comment to reflect the fact that PATH_MAX is